--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <!-- Header Phone -->
             <div class="reg_header_phone">
-                +44 (0) 20 4455 6677
+                {{site.contacts.phone}}
             </div>
             <!-- Header Phone End-->
             
