--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Hank Quinlan, Horrible Cop
 
 			<!-- Header Phone -->
 			<div class="reg_header_phone">
-				+44 (0) 20 4455 6677
+				{{ site.contacts.phome }}
 			</div>
 			<!-- Header Phone End-->
 
