--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ title: Hank Quinlan, Horrible Cop
 
 			<!-- Header Phone -->
 			<div class="reg_header_phone">
-				{{ site.contacts.phome }}
+				{{ site.contacts.phone }}
 			</div>
 			<!-- Header Phone End-->
 
