--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Green Hostel
+phone: +380685006977
 ---
 
 <!-- Page -->
@@ -16,7 +17,7 @@ title: Hank Quinlan, Horrible Cop
 
 			<!-- Header Phone -->
 			<div class="reg_header_phone">
-				{{ site.contacts.phone }}
+				{{ page.phone }}
 			</div>
 			<!-- Header Phone End-->
 
