--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ phone: +380685006977
 
 			<!-- Header Phone -->
 			<div class="reg_header_phone">
-				{{ page.phone }}
+				+{{ page.phone }}
 			</div>
 			<!-- Header Phone End-->
 
