--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ phone: +380685006977
 
 			<!-- Header Phone -->
 			<div class="reg_header_phone">
-				+{{ page.phone }}
+				+{{ params.phone }}
 			</div>
 			<!-- Header Phone End-->
 
 			<!-- Header Social Buttons -->
 			<div class="reg_header_soc">
-				<b>Share</b>
+				<b>Поділитись</b>
 				<div class="reg_header_soc_btns">
 					<a href="#" class="ti ti-facebook"></a>
 					<a href="#" class="ti ti-twitter"></a>
