--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ phone: +380685006977
 					<div class="col-md-3 col-sm-12 col-xs-12">
                      <span class="reg_subtitle">
                         <span class="reg_book_close"><span></span><span></span></span>
-                        Book Now
+                        Замовити
                     </span>
 					</div>
 					<div class="col-md-9 col-sm-12 col-xs-12">
