--- a/index.html
+++ b/index.html
@@ -91,25 +91,7 @@ phone: +380685006977
 		<div class="reg_over" data-color="#333" data-opacity="0.3" data-0="opacity:0.3;" data--400-bottom="opacity:0;"></div>
 
 		<div class="container">
-			<div class="reg_slider_content reg_wht_txt">
-				<!-- vertical text -->
-				<div class="reg_slider_copyright reg_slider_copyright_right">© Regal 2016</div>
-
-				<!-- Slider Texts -->
-				<div class="reg_slide_txt reg_slide_center_middle text-center"  data-0="opacity:1;" data--400-bottom="opacity:0;">
-
-					<div class="reg_slide_title">Regal.</div>
-					<div class="reg_slide_subtitle">Our hostel is located in the capital’s hippest and trendiest district.</div>
-
-				</div>
-				<!-- Slider Texts End -->
-
-				<!-- Slide Down -->
-				<a class="reg_scroll_down reg_go" href="#reg_content">
-					<b></b>
-					Scroll
-				</a>
-			</div>
+			{% include logo.html %}
 
 
 			<!-- Booking -->
