--- a/index.html
+++ b/index.html
@@ -35,51 +35,7 @@ phone: +380685006977
 		</div>
 
 
-		<!-- Menu Btn -->
-		<div class="reg_menu clearfix" data-301-end="left:0px" data-300-end="left:-200px">
-			<div class="reg_menu_btn">
-				<span></span><span></span><span></span>
-			</div>
-			<b>Regal.</b>
-		</div>
-		<!-- Menu Btn End-->
-
-		<!-- Booking Btn -->
-		<div class="reg_book clearfix">
-			<i class="ti ti-tag"></i>
-		</div>
-		<!-- Booking Btn End-->
-
-		<!-- Menu Hover -->
-		<div class="reg_menu_cont reg_image_bck" data-color="#292929">
-			<div class="reg_menu_cont_txt">
-
-				<!-- Logo + Close Btn -->
-				<div class="reg_menu_cont_logo"><div class="reg_menu_cont_logo_close"><span></span><span></span></div>Regal.</div>
-				<ul>
-					<li><a href="#about"><span>About</span></a></li>
-					<li><a href="#rooms"><span>Rooms & Prices</span></a></li>
-					<li><a href="#reviews"><span>Reviews</span></a></li>
-					<li><a href="#services"><span>Services</span></a></li>
-					<li><a href="#gallery"><span>Gallery</span></a></li>
-					<li><a href="#instagram"><span>Instagram</span></a></li>
-					<li><a href="#team"><span>Team</span></a></li>
-					<li><a href="#offers"><span>Special Offers</span></a></li>
-				</ul>
-
-				<!-- Social Btns -->
-				<div class="reg_menu_cont_social">
-					Follow Us
-					<a href="#" class="ti ti-facebook"></a>
-					<a href="#" class="ti ti-twitter"></a>
-					<a href="#" class="ti ti-instagram"></a>
-					<a href="#" class="ti ti-google"></a>
-				</div>
-				<!-- Social Btns End-->
-			</div>
-		</div>
-		<!-- Menu Hover End-->
-
+		{% include menu.html %}
 
 
 	</header>
