--- a/index.html
+++ b/index.html
@@ -60,51 +60,7 @@ phone: +380685006977
 	<!-- Content -->
 	<section id="reg_content" class="reg_content">
 
-		<!-- section -->
-		<section class="reg_section" id="about">
-			<div class="container text-center">
-				<h2>About Regal</h2><br>
-				<h3 class="reg_subtitle">Our Story</h3>
-
-
-				<div class="row reg_auto_height">
-
-					<!-- col -->
-					<div class="col-md-6 reg_image_bck reg_wht_txt" data-image="http://placehold.it/1000x1000">
-						<div class="reg_over" data-color="#333" data-opacity="0.8"></div>
-						<a href="https://www.youtube.com/watch?v=BsekcY04xvQ" class="video reg_fullwidth_link"></a>
-						<div class="reg_block_center">
-							<h3>
-								<span class="reg_underline_title">Watch</span>
-								<br>
-								<span class="reg_underline_title">About Regal</span>
-								<br>
-								<span class="reg_underline_title">in 1 Minute</span>
-							</h3>
-						</div>
-					</div>
-					<!-- cole end -->
-
-					<!-- col -->
-					<div class="col-md-6 reg_image_bck" data-color="#f2f2f2">
-						<div class="reg_simple_block text-left">
-							<h2>Essential Info</h2>
-							<h3>About Regal</h3>
-							<p>Our hostel is located in the capital’s hippest and trendiest district: Shoreditch. We are all about East London! Our accommodation is the talk of the town and is ideal for guests who want to be part of the creative and cutting-edge world that is East London. There are literally hundreds of cool bars, quirky boutiques and alternative coffee shops all around us.</p>
-							<h3>Jonathan Hayes</h3>
-							<p>Co-founder</p>
-							<img src="images/signature.png" height="80" alt="">
-						</div>
-					</div>
-					<!-- cole end -->
-				</div>
-				<!-- row end -->
-
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
+		{% include about.html %}
 
 		<!-- section -->
 		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="rooms">
