add font Raleway

--- a/index.html
+++ b/index.html
@@ -62,118 +62,7 @@ phone: +380685006977
 
 		{% include about.html %}
 
-		<!-- section -->
-		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="rooms">
-			<div class="container text-center">
-				<h2>Explore</h2><br>
-				<h3 class="reg_subtitle">Rooms & Prices</h3>
-
-				<div class="row row_no_pd reg_auto_height">
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_single_carousel reg_rooms_carousel reg_wht_txt">
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Living Room</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Kitchen</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Bathroom</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 reg_image_bck" data-color="#fff">
-						<div class="reg_simple_block text-left">
-							<h2>Mixed dorms <a href="#reg_page" class="reg_go"><i class="ti ti-tag"></i><b>Book Now</b></a></h2>
-							<h4>Stylish 4-6, 8-10 and 18-bed dorms!</h4>
-							<ul>
-								<li>18-bed dorm has pod beds with dividing panels, equipped with a bed light and small locker for comfort and privacy</li>
-								<li>8-10 bedded dorm room are mostly used for groups and parties, so everybody can stay together</li>
-								<li>Smaller dorms have normal bunk beds</li>
-								<li>The bigger the room, the cheaper it is! Our 18-bed dorm is the cheapest option for travellers…</li>
-							</ul>
-							<h3>From <span class="reg_underline_title">$13</span> per bed per night </h3>
-						</div>
-					</div>
-					<!-- item end -->
-
-					<!-- item -->
-					<div class="col-md-6 col-md-push-6" >
-						<div class="reg_single_carousel reg_rooms_carousel reg_wht_txt">
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Living Room</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Kitchen</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Kitchen</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 reg_image_bck col-md-pull-6" data-color="#fff">
-						<div class="reg_simple_block text-left">
-							<h2>Girls-only dorms <a href="#reg_page" class="reg_go"><i class="ti ti-tag"></i><b>Book Now</b></a></h2>
-							<h4>Girls-only (no guys – sorry!)</h4>
-							<ul>
-								<li>All girls dorms have the same clean and cosy decor and facilities</li>
-								<li>A good value option for girls on a budget, helping you save money and giving you the opportunity to meet fellow travellers, without being surrounded by snoring boys</li>
-								<li>18-bed dorm has pod beds with dividing panels, equipped with a bed light and small locker for comfort and privacy</li>
-							</ul>
-							<h3>From <span class="reg_underline_title">$13</span> per bed per night </h3>
-						</div>
-					</div>
-
-					<!-- item end -->
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_single_carousel reg_rooms_carousel reg_wht_txt">
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Private Room</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Private Kitchen</div>
-							</div>
-							<div class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<!-- vertical text -->
-								<div class="reg_slider_copyright">Private Pool</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 reg_image_bck" data-color="#fff">
-						<div class="reg_simple_block text-left">
-							<h2>Private rooms <a href="#reg_page" class="reg_go"><i class="ti ti-tag"></i><b>Book Now</b></a></h2>
-							<h4>Private rooms offer you a bit more intimacy. And a cup of tea or coffee.</h4>
-							<ul>
-								<li>18-bed dorm has pod beds with dividing panels, equipped with a bed light and small locker for comfort and privacy</li>
-								<li>8-10 bedded dorm room are mostly used for groups and parties, so everybody can stay together</li>
-								<li>Smaller dorms have normal bunk beds</li>
-								<li>The bigger the room, the cheaper it is! Our 18-bed dorm is the cheapest option for travellers…</li>
-							</ul>
-							<br>
-							<h3>From <span class="reg_underline_title">$20</span> per bed per night </h3>
-						</div>
-					</div>
-					<!-- item end -->
-
-				</div>
-				<!-- row end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
+		{% include rooms.html %}
 
 		<!-- section -->
 		<section class="reg_section reg_image_bck reg_fixed reg_wht_txt" data-stellar-background-ratio="0.2" data-image="http://placehold.it/1400x800" id="reviews">
