--- a/index.html
+++ b/index.html
@@ -64,151 +64,7 @@ phone: +380685006977
 
 		{% include rooms.html %}
 
-		<!-- section -->
-		<section class="reg_section reg_image_bck reg_fixed reg_wht_txt" data-stellar-background-ratio="0.2" data-image="http://placehold.it/1400x800" id="reviews">
-
-			<!-- over -->
-			<div class="reg_over" data-color="#292929" data-opacity="0.7"></div>
-
-
-			<div class="container text-center">
-
-				<h2>Reviews</h2><br>
-				<h3 class="reg_subtitle">In Social Networks</h3>
-
-				<div class="reg_auto_height reg_single_carousel reg_blc_txt">
-
-
-					<!-- item -->
-					<div class="reg_review_item">
-						<div class="col-md-6 reg_image_bck" data-image="http://placehold.it/1000x1000"></div>
-						<div class="col-md-6 reg_image_bck" data-color="#292929">
-							<div class="reg_simple_block">
-								<h2><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i></h2>
-								<h3>Once again, another great stay at Regal!! </h3>
-								<p>Once again, another great stay at Regal!! Great location, great atmosphere, fab staff- so friendly, welcoming and always willing to help.</p>
-								<p><a href="#" class="btn">Read Full Review</a></p>
-								<p><img src="http://placehold.it/200x80" alt=""></p>
-							</div>
-						</div>
-					</div>
-
-
-					<!-- item -->
-					<div class="reg_review_item">
-						<div class="col-md-6 reg_image_bck" data-image="http://placehold.it/1000x1000"></div>
-						<div class="col-md-6 reg_image_bck" data-color="#292929">
-							<div class="reg_simple_block">
-								<h2><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i></h2>
-								<h3>Great stay!!</h3>
-								<p>Thank you for a perfect stay, every thing was very clean and tidy. We were in a private room with a private restroom. Breakfast included, very active bar space and funny people, atmosfere was really nice.</p>
-								<p><a href="#" class="btn">Read Full Review</a></p>
-								<p><img src="http://placehold.it/200x80" alt=""></p>
-							</div>
-						</div>
-					</div>
-
-
-					<!-- item -->
-					<div class="reg_review_item">
-						<div class="col-md-6 reg_image_bck" data-image="http://placehold.it/1000x1000"></div>
-						<div class="col-md-6 reg_image_bck" data-color="#292929">
-							<div class="reg_simple_block">
-								<h2><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i><i class="ti ti-star"></i></h2>
-								<h3>Definitely would recommend staying here</h3>
-								<p>Very clean and comfortable hostel in a great location. The atmosphere was very fun and lively. Definitely would recommend staying here. </p>
-								<p><a href="#" class="btn">Read Full Review</a></p>
-								<p><img src="http://placehold.it/200x80" alt=""></p>
-							</div>
-						</div>
-					</div>
-
-
-				</div>
-				<!-- carousel end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
-
-		<!-- section -->
-		<section class="reg_section" id="services">
-			<div class="container text-center">
-				<h2>Services</h2><br>
-				<h3 class="reg_subtitle">Explore Regal</h3>
-
-				<!-- icon boxes -->
-				<div class="reg_icon_boxes row">
-
-					<!-- animation -->
-					<div data-animation="animation_blocks" data-bottom="@class:noactive" data--100-bottom="@class:active">
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-hotel"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Central</b> Location</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-family-room"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Familiar</b> & Homely</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-bar"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Super</b> Social</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-laundry-service"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Totally</b> Equipped</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-hotel-staff"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Local</b> Knowledge</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box col-md-4 col-sm-6">
-							<i class="ti flaticon-wifi-room"></i>
-							<div class="reg_icon_box_content">
-								<h4><b>Friendly</b>Staff</h4>
-								Lorem ipsum dolor sit amet, consectetur adipisicingelit, sed do
-							</div>
-						</div>
-
-					</div>
-					<!-- anmation end -->
-
-				</div>
-				<!-- icon boxes end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
+		{% include services.html %}
 
 		<!-- section -->
 		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="gallery">
