--- a/index.html
+++ b/index.html
@@ -66,167 +66,7 @@ phone: +380685006977
 
 		{% include services.html %}
 
-		<!-- section -->
-		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="gallery">
-			<div class="container text-center">
-				<h2>Gallery</h2><br>
-				<h3 class="reg_subtitle">Have a look around!</h3>
-
-
-
-				<div class="row reg_gallery reg_auto_height reg_wht_txt">
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_gallery_carousel_txt reg_over" data-color="#292929" data-opacity="0.8">
-							<h2>Social Spaces</h2>
-						</div>
-						<div class="reg_single_carousel reg_gallery_carousel reg_rooms_carousel">
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-						</div>
-					</div>
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_gallery_carousel_txt reg_over" data-color="#292929" data-opacity="0.8">
-							<h2>Rooms & Dorms</h2>
-						</div>
-						<div class="reg_single_carousel reg_gallery_carousel reg_rooms_carousel">
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-						</div>
-					</div>
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_gallery_carousel_txt reg_over" data-color="#292929" data-opacity="0.9">
-							<h2>Kitchen</h2>
-						</div>
-						<div class="reg_single_carousel reg_gallery_carousel reg_rooms_carousel">
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-						</div>
-					</div>
-
-					<!-- item -->
-					<div class="col-md-6" >
-						<div class="reg_gallery_carousel_txt reg_over" data-color="#292929" data-opacity="0.8">
-							<h2>Regal Bar</h2>
-						</div>
-						<div class="reg_single_carousel reg_gallery_carousel reg_rooms_carousel">
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-							<div class="reg_room_block reg_gallery_item reg_image_bck" data-image="http://placehold.it/1000x1000">
-							</div>
-						</div>
-					</div>
-
-				</div>
-				<!-- row end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
-
-		<!-- section -->
-		<section class="reg_section" id="instagram">
-			<div class="container text-center">
-				<h2>Instagram</h2><br>
-				<h3 class="reg_subtitle">Follow Us on #maskan</h3>
-
-				<!-- instagram -->
-				<div id="instagram-carousel" class="insta_slider clearfix"></div>
-
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
-
-		<!-- section -->
-		<section class="reg_section" id="team">
-			<div class="container text-center">
-				<h2>Team</h2><br>
-				<h3 class="reg_subtitle">Friendly & Professional</h3>
-
-				<!-- boxes -->
-				<div class="reg_icon_boxes row text-center">
-
-
-					<!-- slider -->
-					<div class="reg_team_slider">
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>William Sanchez</b> <br>CEO/Founder</h4>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>Amber Richards</b> <br>Managing director</h4>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>Harold Henry</b> <br>Computer programmer</h4>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>Austin Burton</b> <br>Events organiser</h4>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>Jean Gray</b> <br>Publisher</h4>
-						</div>
-
-						<!-- item -->
-						<div class="reg_icon_box reg_team_box">
-							<div class="reg_icon_box_photo">
-								<img src="http://placehold.it/450x1215" alt="">
-							</div>
-							<h4><b>Joseph Baker</b> <br>Engineer</h4>
-						</div>
-
-					</div>
-					<!-- slider end -->
-				</div>
-				<!-- boxes end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
+		{% include gallery.html %}
 
 		<!-- section -->
 		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="map">
