--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ phone: +380685006977
 
 		{% include gallery.html %}
 
+		{% include offers.html %}
+
 		<!-- section -->
 		<section class="reg_section reg_image_bck" data-color="#f2f2f2" id="map">
 			<div class="container text-center">
@@ -84,84 +86,6 @@ phone: +380685006977
 			<!-- container end -->
 		</section>
 		<!-- section end -->
-
-
-
-		<!-- section -->
-		<section class="reg_section" id="offers">
-			<div class="container text-center">
-				<h2>Special Offers</h2><br>
-				<h3 class="reg_subtitle">Best rates guarantee</h3>
-
-				<div class="row">
-
-					<!-- item -->
-					<div class="col-md-4 reg_special_offers_item">
-						<div class="reg_special_offers reg_image_bck reg_wht_txt text-left" data-color="#292929">
-							<div class="reg_special_offers_best"><b>Best Rates</b> Guarantee</div>
-							<h3>Put A Pound Back In Your Pocket</h3>
-							<h4>3 nights in LDN from just $60</h4>
-							<ul>
-								<li>Get: 3 nights from $60</li>
-								<li>In: Regal</li>
-								<li>During:  27th - 30th of August</li>
-								<li>Book by:  30th June</li>
-							</ul>
-							<span class="btn">More info and how to book</span>
-							<a href="#" class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<b class="btn">More info and how to book</b>
-							</a>
-						</div>
-					</div>
-
-					<!-- item -->
-					<div class="col-md-4 reg_special_offers_item">
-						<div class="reg_special_offers reg_image_bck reg_wht_txt text-left" data-color="#292929">
-							<div class="reg_special_offers_best"><b>Best Rates</b> Guarantee</div>
-							<h3>Bands and live performances</h3>
-							<h4>3 nights in LDN from just $60</h4>
-							<ul>
-								<li>Get: 3 nights from $60</li>
-								<li>In: Regal</li>
-								<li>During:  27th - 30th of August</li>
-								<li>Book by:  30th June</li>
-							</ul>
-							<span class="btn">More info and how to book</span>
-							<a href="#" class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<b class="btn">More info and how to book</b>
-							</a>
-						</div>
-					</div>
-
-					<!-- item -->
-					<div class="col-md-4 reg_special_offers_item">
-						<div class="reg_special_offers reg_image_bck reg_wht_txt text-left" data-color="#292929">
-							<div class="reg_special_offers_best"><b>Best Rates</b> Guarantee</div>
-							<h3>Big Night Out pub crawl</h3>
-							<h4>3 nights in LDN from just $60</h4>
-							<ul>
-								<li>Get: 3 nights from $60</li>
-								<li>In: Regal</li>
-								<li>During:  27th - 30th of August</li>
-								<li>Book by:  30th June</li>
-							</ul>
-							<span class="btn">More info and how to book</span>
-							<a href="#" class="reg_room_block reg_image_bck" data-image="http://placehold.it/1000x1000">
-								<b class="btn">More info and how to book</b>
-							</a>
-						</div>
-					</div>
-
-				</div>
-				<!-- row end -->
-
-			</div>
-			<!-- container end -->
-		</section>
-		<!-- section end -->
-
-
-
 
 	</section>
 	<!-- content end -->
