--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ phone: +380685006977
 
 
 	<!-- Slider -->
-	<div class="reg_slider reg_image_bck reg_fixed" data-stellar-background-ratio="0.2" data-image="/images/logo_background.png">
+	<div id="home" class="reg_slider reg_image_bck reg_fixed" data-stellar-background-ratio="0.2" data-image="/images/logo_background.png">
 		<div class="reg_over" data-color="#333" data-opacity="0.3" data-0="opacity:0.3;" data--400-bottom="opacity:0;"></div>
 
 		<div class="container">
