--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ phone: +380685006977
 
 			<!-- help -->
 			<div id="reg_footer_block" data-0="@class:noactive" data-300-end="@class:active">
-				<i class="ti flaticon-reception-bell"></i><span class="reg_subtitle">Допомога. <b>+{{site.data.params.phone}}</b></span>
+				<i class="ti flaticon-reception-bell"></i><span class="reg_subtitle"><b>+{{site.data.params.phone}}</b></span>
 				<p>Якщо у вас виникли запитання, або якщо ви хочете поговорити з кимось із персоналу - зателефонуйте нам за цим номером.</p>
 			</div>
 			<!-- help end -->
