--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ phone: +380685006977
 			<!-- help -->
 			<div id="reg_footer_block" data-0="@class:noactive" data-300-end="@class:active">
 				<i class="ti flaticon-reception-bell"></i><span class="reg_subtitle"><b>+{{site.data.params.phone}}</b></span>
-				<p>Якщо у вас виникли запитання, або якщо ви хочете поговорити з кимось із персоналу - зателефонуйте нам за цим номером.</p>
+				<p>Якщо у вас виникли запитання, або ви хочете поговорити з персоналом - телефонуйте нам за цими номерами.</p>
 			</div>
 			<!-- help end -->
 
